@@ -1,3 +1,4 @@
+import itertools
 import os.path
 import time
 from .core import *
@@ -35,8 +36,7 @@ def save_output(profileli, opt):
             return
         with file_io.FileWriter("session.summary", opt) as f:
             f.writerow(["%s version:" % version.title,
-                       "%s (Last modified %s %s, %s)"
-                        % ((version.version,) + version.date)])
+                       "%s (Last modified %s %s, %s)" % ((version.version,) + version.date)])
             f.writerow(["Number of evaluated profiles:", len(eval_proli)])
             if err_fli:
                 f.writerow(["Number of non-evaluated profiles:", len(err_fli)])
@@ -183,30 +183,22 @@ def save_output(profileli, opt):
             for n, li in enumerate([pro.__dict__[prefix + 'distli'] for prefix in prefixli]):
                 cols[n].extend([m(e, pro.pixelwidth) for e in li])
         # transpose cols and append to table
-        table.extend(map(lambda *col: [e if e is not None else "" for e in col], *cols))
+        table.extend(list(itertools.zip_longest(*cols, fillvalue="")))
         with file_io.FileWriter("interpoint.distances", opt) as f:
             f.writerows(table)
 
     def write_mc_dist_to_path():
-
-        def m_li(*_li):
-            return [m(x, pro.pixelwidth) for x in _li]
-
         if not opt.run_monte_carlo:
             return
         table = [["Run %d" % (n + 1)
                   for n in range(0, opt.monte_carlo_runs)]]
         for pro in eval_proli:
-            table.extend(map(m_li, *[[p.dist_to_path for p in li['pli']]
-                                     for li in pro.mcli]))
+            table.extend(itertools.zip_longest(*[[m(p.dist_to_path, pro.pixelwidth)
+                                                  for p in li['pli']] for li in pro.mcli]))
         with file_io.FileWriter("simulated.path.distances", opt) as f:
             f.writerows(table)
 
     def write_mc_ip_dists(dist_type):
-
-        def m_li(*_li):
-            return [m(x, pro.pixelwidth) for x in _li]
-
         if not (opt.run_monte_carlo and opt.determine_interpoint_dists):
             return
         for ip_type in [key for key, val in opt.interpoint_relations.items()
@@ -218,13 +210,12 @@ def save_output(profileli, opt):
                 short_dist_type = 'lat'
             else:
                 short_dist_type = ''
-            table = [["Run %d" % (n + 1)
-                      for n in range(0, opt.monte_carlo_runs)]]
+            table = [["Run %d" % (n + 1) for n in range(0, opt.monte_carlo_runs)]]
             for pro in eval_proli:
-                table.extend(map(m_li,
-                                 *[p for li in pro.mcli
-                                   for p in li[ip_type]
-                                   ["%sdist" % short_dist_type]]))
+                table.extend(itertools.zip_longest(*[m(p, pro.pixelwidth)
+                                                     for li in pro.mcli
+                                                     for p in li[ip_type]["%sdist"
+                                                                          % short_dist_type]]))
             with file_io.FileWriter("%s.interpoint.%s.distance.summary"
                                     % (ip_type.replace(" ", ""), dist_type), opt) as f:
                 f.writerows(table)
