@@ -1,3 +1,7 @@
+2018-05-31:
+- Fixed bug present since migration to Python 3 (due to altered behaviour of map())
+  that truncated interpoint distance columns in interpoint summary to the length of
+  the column with fewest rows (only of concern when random points were used).
 2018-05-08:
 - Fixed a critical bug, introduced in version 2.0.0, that triggered an error when
   encountering particles with a negative distance to path.
